# bool-bench

./: .gitignore  AGENTS.md  CMakeLists.txt  aig.cpp  bool_bench.cpp  bool_bench.h  bool_bench.py  build.sh  decision_tree.cpp  decision_tree.h  dimensions.py  dimensions.txt  generator.py  medium_bitness.cpp  medium_bitness.h  small_bitness.cpp  small_bitness.h  test.py
circuits/: convert_bench_to_aig.sh
circuits/iscas85/: c1355.aig  c17.aig  c1908.aig  c2670.aig  c3540.aig  c432.aig  c499.aig  c5315.aig  c6288.aig  c7552.aig  c880.aig
circuits/iscas87/: c1196.aig  c1196.bench  c1238.aig  c1238.bench  s1196.aig  s1196a.aig  s1196b.aig  s1238.aig  s1238a.aig  s13207.aig  s1423.aig  s1488.aig  s1494.aig  s15850.aig  s208.aig  s208a.aig  s27.aig  s27a.aig  s298.aig  s344.aig  s344.bench  s349.aig  s349.bench  s35932.aig  s382.aig  s382.bench  s38417.aig  s38584.aig  s386.aig  s386.bench  s386a.aig  s400.aig  s400.bench  s420.aig  s420a.aig  s444.aig  s444.bench  s510.aig  s510.bench  s526.aig  (+11 more)
src/: aig.cpp  aig.h  bool_bench.cpp  bool_bench.h  dataset.cpp  decision_tree.cpp  decision_tree.h  table.cpp  table.h  tree.cpp  tree.h  utils.cpp  utils.h
